--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,13 @@ a:link, a:visited {
 
 a:hover {
   color: #000000; }
+@media (min-width: 767px) {
+	.dt{
+		display: none;
+	}
+ .carry{
+ 	display: block;
+ }
   .nav{
   	width: 100%;
   	height:auto;
@@ -101,7 +108,7 @@ a:hover {
 	width:50%;
 	float: left;
 	margin-left:10%;
-	margin-top: 6%;
+	margin-top: 5%;
 	font-size: 20px;
 	color: #444444;
 	line-height:35px;
@@ -200,7 +207,7 @@ a:hover {
 .map{
 	width: 50%;
 	float: left;
-	
+	position:relative;
 	
 }
 .map img{
@@ -410,4 +417,19 @@ a:hover {
 .carry{
 	width: 100%;
 	height: auto;
+}
+}
+@media (max-width: 767px) {
+	.carry{
+		display: none;
+	}
+	.dt{
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	.dt img{
+		width: 100%;
+		height: 100%;
+	}
 }
